--- a/frontend/src/widgets/projects-section/ui/projects-section.module.scss
+++ b/frontend/src/widgets/projects-section/ui/projects-section.module.scss
@@ -1,21 +1,22 @@
 @use "../../../shared/styles/tokens/" as t;
 @use "../../../shared/styles/lib/responsive-design/_fluid-scale.scss/" as fs;
+@use "../../../shared/styles/lib/layout/_projects-layout.scss" as pl;
 
 .projectsSection {
   background-color: var(--md-sys-color-surface);
   color: var(--md-sys-color-on-surface);
 
+  padding-block: fs.fluid-scale(
+    t.$md-sys-spacing-16,
+    t.$md-sys-spacing-20,
+    t.$md-sys-viewport-compact,
+    t.$md-sys-viewport-expanded
+  );
+
   .wrapper {
     display: flex;
     flex-direction: column;
     gap: t.$md-sys-spacing-20;
-
-    padding-block: fs.fluid-scale(
-      t.$md-sys-spacing-16,
-      t.$md-sys-spacing-20,
-      t.$md-sys-viewport-compact,
-      t.$md-sys-viewport-expanded
-    );
 
     h2 {
       @include t.typescale("display-medium");
@@ -24,10 +25,7 @@
     }
 
     .projectList {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      column-gap: t.$md-sys-spacing-20;
-      row-gap: t.$md-sys-spacing-20;
+      @include pl.projects-layout();
     }
   }
 }
