--- a/frontend/src/pages/home-page/ui/home-page.module.scss
+++ b/frontend/src/pages/home-page/ui/home-page.module.scss
@@ -1,7 +1,25 @@
 @use "../../../shared/styles/tokens" as t;
+@use "../../../shared/styles/lib/responsive-design/_fluid-scale.scss" as fs;
 
 .servicesSection {
   padding-top: t.$md-sys-spacing-16;
 
   background-color: var(--md-sys-color-inverse-surface);
+}
+
+.projects {
+  > :nth-child(1) {
+    @media (max-width: t.$md-ref-breakpoint-medium-max) {
+      padding-top: fs.fluid-scale(
+        t.$md-sys-spacing-4,
+        t.$md-sys-spacing-12,
+        t.$md-sys-viewport-compact,
+        t.$md-ref-breakpoint-medium-max
+      );
+    }
+  }
+
+  > :nth-child(2) {
+    padding-block: 0;
+  }
 }
