--- a/frontend/src/widgets/development-process-section/ui/icon-stage/icon-stage.module.scss
+++ b/frontend/src/widgets/development-process-section/ui/icon-stage/icon-stage.module.scss
@@ -1,12 +1,15 @@
 .circle {
-  background-color: var(--md-sys-color-tertiary);
+  // background-color: var(--md-sys-color-tertiary);
+  // background-color: var(--md-sys-color-surface-container-highest);
+  background-color: var(--md-sys-color-surface-container-high);
+  // background-color: var(--md-sys-color-primary);
+
   position: relative;
   max-height: 64px;
   min-width: 64px;
   border-radius: 50%;
 
-  // todo [14.12.2025]: change media to 1200px
-  @media (min-width: 1000px) {
+  @media (min-width: 1200px) {
     min-height: 96px;
     min-width: 96px;
   }
@@ -34,8 +37,7 @@
     width: 28px;
     gap: 4px;
 
-    // todo [14.12.2025]: change media to 1200px
-    @media (min-width: 1000px) {
+    @media (min-width: 1200px) {
       width: 44px;
       height: 44px;
     }
