--- a/frontend/src/widgets/development-process-section/ui/development-process-section/development-process-section.module.scss
+++ b/frontend/src/widgets/development-process-section/ui/development-process-section/development-process-section.module.scss
@@ -1,6 +1,7 @@
 .sectionDevelopmentProcess {
   background-color: var(--md-sys-color-surface-container-low);
   color: var(--md-sys-color-on-surface);
+  padding: 0 12px;
 }
 
 .title {
