--- a/frontend/src/widgets/development-process-section/ui/icon-stage/icon-stage.module.scss
+++ b/frontend/src/widgets/development-process-section/ui/icon-stage/icon-stage.module.scss
@@ -8,6 +8,7 @@
   max-height: 64px;
   min-width: 64px;
   border-radius: 50%;
+  aspect-ratio: 1;
 
   @media (min-width: 1200px) {
     min-height: 96px;
