--- a/frontend/src/widgets/development-process-section/ui/development-process-section/development-process-section.module.scss
+++ b/frontend/src/widgets/development-process-section/ui/development-process-section/development-process-section.module.scss
@@ -1,5 +1,5 @@
 .sectionDevelopmentProcess {
-  background-color: var(--md-sys-color-surface-container-low);
+  background-color: var(--md-sys-color-surface);
   color: var(--md-sys-color-on-surface);
   font-family:
     Noto Sans,
