--- a/frontend/src/widgets/development-process-section/ui/desktop-section-development-process/desktop-section-development-process.module.scss
+++ b/frontend/src/widgets/development-process-section/ui/desktop-section-development-process/desktop-section-development-process.module.scss
@@ -14,6 +14,21 @@
   color: var(--md-sys-color-tertiary);
   font-size: 22px;
   font-weight: 600;
+  margin-bottom: 12px;
+}
+
+.stageDescriptionlist {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  .listItem {
+    display: flex;
+    gap: 3px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.5px;
+  }
 }
 
 .iconStage {
