--- a/frontend/src/widgets/header/ui/header.module.scss
+++ b/frontend/src/widgets/header/ui/header.module.scss
@@ -140,12 +140,8 @@ $md-comp-nav-rail-nav-padding: t.$md-sys-spacing-4;
     display: flex;
     justify-content: center;
 
-    @include typo.typescale("label-medium");
-
     width: 96px;
     padding: $md-comp-nav-rail-nav-padding;
-
-    color: var(--md-sys-color-on-surface-variant);
 
     .navItem {
       display: flex;
@@ -153,6 +149,14 @@ $md-comp-nav-rail-nav-padding: t.$md-sys-spacing-4;
       align-items: center;
       flex-direction: column;
       gap: spacing.$md-sys-spacing-1;
+
+      @include typo.typescale("label-medium");
+
+      --md-comp-text-link-color: var(--md-sys-color-on-surface-variant);
+
+      &:hover {
+        --md-comp-text-link-color: var(--md-sys-color-on-surface);
+      }
 
       .navIcon {
         width: 32px;
