feat(header): fix links to home page

--- a/frontend/src/widgets/header/ui/header.module.scss
+++ b/frontend/src/widgets/header/ui/header.module.scss
@@ -90,6 +90,9 @@ $md-comp-nav-rail-nav-padding: t.$md-sys-spacing-4;
     }
 
     .brandName {
+      display: flex;
+      align-items: center;
+
       @include typo.typescale("title-large");
       font-size: fs.fluid-scale(
         16px,
