--- a/frontend/src/widgets/header/ui/header.module.scss
+++ b/frontend/src/widgets/header/ui/header.module.scss
@@ -141,7 +141,9 @@ $md-comp-nav-rail-nav-padding: t.$md-sys-spacing-4;
     flex-shrink: 0;
 
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 
     width: 96px;
     padding: $md-comp-nav-rail-nav-padding;
