--- a/frontend/src/shared/ui/text-actions/text-action.module.scss
+++ b/frontend/src/shared/ui/text-actions/text-action.module.scss
@@ -1,8 +1,8 @@
-@use "../../../styles/tokens" as t;
-@use "../../../styles/lib/responsive-design/_fluid-scale.scss" as fs;
+@use "../../styles/tokens/" as t;
+@use "../../styles/lib/responsive-design/_fluid-scale.scss" as fs;
 
-.textLink {
-  --md-comp-text-link-color: var(--md-sys-color-tertiary);
+.textAction {
+  --md-comp-text-action-color: var(--md-sys-color-tertiary);
 
   position: relative;
   overflow: hidden;
@@ -17,7 +17,7 @@
   @include t.typescale("title-large");
   border-radius: t.$md-sys-shape-corner-value-extra-extra-large;
 
-  color: var(--md-comp-text-link-color);
+  color: var(--md-comp-text-action-color);
 
   &::before {
     content: "";
@@ -26,7 +26,7 @@
     inset: 0;
 
     opacity: 0;
-    background: var(--md-comp-text-link-color);
+    background: var(--md-comp-text-action-color);
 
     @include t.effects("fast");
     transition-property: opacity;
@@ -39,7 +39,7 @@
   }
 
   &:focus-visible {
-    outline: 2px solid var(--md-comp-text-link-color);
+    outline: 2px solid var(--md-comp-text-action-color);
     outline-offset: 2px;
   }
 
