--- a/frontend/src/widgets/header/ui/header.module.scss
+++ b/frontend/src/widgets/header/ui/header.module.scss
@@ -168,6 +168,18 @@ $md-comp-nav-rail-nav-padding: t.$md-sys-spacing-4;
         height: 32px;
       }
     }
+
+    .textThemeToggle {
+      --md-comp-text-action-color: var(--md-sys-color-on-surface-variant);
+
+      border: 1px solid var(--md-sys-color-outline-variant);
+      padding: t.$md-sys-spacing-4;
+
+      .themeIcon {
+        height: 24px;
+        width: 24px;
+      }
+    }
   }
 
   .pageIndex {
