feat(global.scss): configure outline for links and btns

--- a/frontend/src/shared/styles/global.scss
+++ b/frontend/src/shared/styles/global.scss
@@ -32,4 +32,9 @@ a {
   // minimum btns size for accessibility
   min-width: 48px;
   min-height: 48px;
+
+  &:focus-visible {
+    outline: 2px solid var(--md-sys-color-outline);
+    outline-offset: 2px;
+  }
 }
