feat(start-project-form): use TextButton for closeBtn

--- a/frontend/src/widgets/start-project-form/ui/start-project-form.module.scss
+++ b/frontend/src/widgets/start-project-form/ui/start-project-form.module.scss
@@ -122,9 +122,9 @@
     justify-content: end;
 
     .closeBtn {
-      @include t.typescale("title-medium");
+      --md-comp-text-action-color: var(--md-sys-color-secondary);
 
-      color: var(--md-sys-color-secondary);
+      @include t.typescale("title-medium");
     }
   }
 
