--- a/frontend/src/shared/ui/lists/dotted-list-item/DottedListItem.module.scss
+++ b/frontend/src/shared/ui/lists/dotted-list-item/DottedListItem.module.scss
@@ -1,11 +1,20 @@
 @use "../../../../shared/styles/tokens/" as t;
 @use "../../../../shared/styles/lib/responsive-design/fluid-scale" as fs;
-.main {
+.dottedListItem {
   display: flex;
   align-items: baseline;
   gap: t.$md-sys-spacing-2;
 
-  @include t.typescale("body-medium");
+  @include t.typescale("body-large");
+
+  @media (max-width: t.$md-ref-breakpoint-medium-max) {
+    font-size: fs.fluid-scale(
+      t.get-typescale-value("body-medium"),
+      t.get-typescale-value("body-large"),
+      t.$md-sys-viewport-compact,
+      t.$md-ref-breakpoint-medium-max
+    );
+  }
 
   &::before {
     content: "";
@@ -18,3 +27,4 @@
     background-color: var(--md-sys-color-primary);
   }
 }
+
